# PT---Rappi

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
assets/: risk_tower.css
docs/design/: ui-redesign-brief.md
docs/superpowers/plans/: 2026-04-20-rappi-ai-dashboard.md
presentation/: rappi-ai-dashboard.md
scripts/: build_dataset.py
src/rappi_availability/: __init__.py  load_data.py  metrics.py  risk_model.py  semantic_chat.py
tests/: test_app_layout.py  test_load_data.py  test_metrics.py  test_packaging.py  test_risk_model.py  test_semantic_chat.py  test_vercel_entrypoint.py
tests/fixtures/: availability_sample.csv
