[project]
name = "rappi-availability-dashboard"
version = "0.1.0"
description = "Local risk tower and semantic chatbot for the Rappi AI Interns 2026 technical test."
requires-python = ">=3.11"
dependencies = [
    "dash==4.1.0",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "python-dotenv==1.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
